src/objects/Training_Room__c.object
<CustomObject>
    <fields>
        <fullName>AVAvailability__c</fullName>
        <label>A/V Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Upon Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OfficeSuite__c</fullName>
        <label>Floor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomCapacity__c</fullName>
        <label>Room Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrainingLocationName__c</fullName>
        <formula>TrainingLocation__r.OfficeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainingLocation__c</fullName>
        <label>Training Location ID</label>
        <referenceTo>Training_Location__c</referenceTo>
        <relationshipLabel>Training Rooms</relationshipLabel>
        <relationshipName>Training_Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Training Room</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>